lots of stuff
Add in loop start option for animations
Allow UV position editing by dragging on texture panel
disable lighting effect applies to children
fix bad scrolling scissoring causing items to disappear